--- a/src/assets/fontello/demo.html
+++ b/src/assets/fontello/demo.html
@@ -146,11 +146,11 @@
     }
     @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?30434');
-      src: url('./font/fontello.eot?30434#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?30434') format('woff'),
-           url('./font/fontello.ttf?30434') format('truetype'),
-           url('./font/fontello.svg?30434#fontello') format('svg');
+      src: url('./font/fontello.eot?34409217');
+      src: url('./font/fontello.eot?34409217#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?34409217') format('woff'),
+           url('./font/fontello.ttf?34409217') format('truetype'),
+           url('./font/fontello.svg?34409217#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -211,6 +211,9 @@
     </div>
     <div class="container" id="icons">
       <div class="row">
+        <div class="span3" title="Code: 0xe80c">
+          <i class="demo-icon icon-file-audio">&#xe80c;</i> <span class="i-name">icon-file-audio</span><span class="i-code">0xe80c</span>
+        </div>
         <div class="span3" title="Code: 0xf04d">
           <i class="demo-icon icon-stop">&#xf04d;</i> <span class="i-name">icon-stop</span><span class="i-code">0xf04d</span>
         </div>
